--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 		<title>To-do list app</title>
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+
+		<!-- jasmine-3.1.0 files !-->
+		<link rel="shortcut icon" type="image/png" href="lib/jasmine-3.1.0/jasmine_favicon.png">
+		<link rel="stylesheet" href="lib/jasmine-3.1.0/jasmine.css">
+		<script src="lib/jasmine-3.1.0/jasmine.js"></script>
+		<script src="lib/jasmine-3.1.0/jasmine-html.js"></script>
+		<script src="lib/jasmine-3.1.0/boot.js"></script>
+
 	</head>
 	<body>
 		<section class="todoapp">
