--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 			<p>Refactored by Christoph Burgmer</p>
 		</footer>
 		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="js/helpers.js"></script>
-		<script src="js/store.js"></script>
-		<script src="js/model.js"></script>
-		<script src="js/template.js"></script>
-		<script src="js/view.js"></script>
-		<script src="js/controller.js"></script>
-		<script src="js/app.js"></script>
+		<script src="src/helpers.js"></script>
+		<script src="src/store.js"></script>
+		<script src="src/model.js"></script>
+		<script src="src/template.js"></script>
+		<script src="src/view.js"></script>
+		<script src="src/controller.js"></script>
+		<script src="src/app.js"></script>
 	</body>
 </html>
